# factor-lab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: data_governance.yaml  event_risk.yaml  execution.yaml  execution_calendar_example.csv  factor_eval.yaml  factor_mining.yaml  factor_selection.yaml  model_lgb.yaml  portfolio.yaml  provider.yaml  provider_ai_chain_current.yaml  provider_csi1000_current.yaml  provider_csi300_current.yaml  provider_current.yaml  provider_current_smoke.yaml  risk.yaml  signal.yaml  trading.yaml
data/: security_industry_overrides.csv
docs/: combo-specs.md  current-research-workflow.md  data-and-artifacts.md  factor-lab-north-star-blueprint.md  factor-research-path.md  portfolio-construction-reading-spine.md  readme-pipeline-section.md  strategy_dictionary_guide.md
factors/: base_price_volume.yaml  registry.yaml
reports/: README.md  approved_factors.yaml  factor_review_2026-04-23.md  factor_review_2026-04-24.md
scripts/: _bootstrap.py  backfill_company_events.py  backtest_factor_events.py  backtest_two_stage_factor_events.py  backtest_wangji_independent_events.py  batch_eval_factors.py  build_akshare_qlib_data.py  build_daily_signal.py  build_emotion_atmosphere.py  build_event_risk_snapshot.py  build_execution_calendar.py  build_expert_review_packet.py  build_exposure_attribution.py  build_liquidity_microstructure.py  build_paper_replay_performance.py  build_portfolio_intraday_performance.py  build_research_context_data.py  build_research_data_domains.py  check_env.py  (+33 more)
(+215 files in other folders)
