[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlib-factor-lab"
version = "0.1.0"
description = "A lightweight Qlib factor research scaffold."
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6.0",
  "pandas>=1.5",
  "numpy>=1.23",
  "akshare>=1.16",
]

[tool.setuptools.packages.find]
where = ["src"]
